feat: método para atualizar beneficio